<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.activity.activity.RegisterActivity"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tv_icon"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"

        />
    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_tv_text"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:layout_below="@+id/tv_icon"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        />
  <ImageView
      android:id="@+id/img_profile"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/img_user_profile"
      android:layout_below="@+id/tv_information"
      android:layout_marginTop="@dimen/tv_margin_top"
      android:layout_centerInParent="true"
      />
    <EditText
        android:id="@+id/et_reg_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_profile"
        android:hint="@string/register_et_full_name_hint"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_fullname"
        android:hint="@string/register_et_email_hint"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_email"
        android:hint="@string/register_et_password_hint"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/et_reg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_reg_password"
        android:hint="@string/register_et_gender_hint"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:singleLine="true"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/et_reg_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_gender"
        android:hint="@string/register_et_dob_hint"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusableInTouchMode="false"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/et_reg_usertype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_dob"
        android:hint="@string/register_et_user_type_hint"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/et_reg_occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_usertype"
        android:hint="@string/register_et_occupation_hint"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:singleLine="true"
    />

    <TextView
        android:id="@+id/tv_reg_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_reg_occupation"
        android:layout_centerInParent="true"
        android:layout_marginTop="49dp"
        android:text="@string/register_tv_sign_up"
        android:textStyle="bold"


        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_reg_signup"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:layout_marginBottom="@dimen/tv_register_btn_margin_bottom"
        android:background="@drawable/custom_stoke_btn"
        android:text="@string/register_btn_continue"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        />

  <TextView
      android:id="@+id/tv_cal_icon"
      android:layout_width="35dp"
      android:layout_height="35dp"
      android:layout_below="@+id/et_reg_gender"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="@dimen/tv_register_cal_margin_top"
      android:layout_marginEnd="@dimen/tv_register_cal_margin_end"
      android:inputType="date"
      android:background="@drawable/ic_date_range_black_24dp" />

</RelativeLayout>