<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.activity.activity.activity.OtpActivity">

    <TextView
        android:id="@+id/tv_opticon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />

    <TextView
        android:id="@+id/tv_otpverification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_tv_verification_text"
        android:textSize="@dimen/medium_large_text_size"
        android:layout_below="@id/tv_opticon"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginTop="@dimen/tv_margin_top"
        />
    <LinearLayout
        android:id="@+id/liner_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_otpverification"
        android:layout_centerInParent="true"
        android:weightSum="4"
        android:layout_marginTop="@dimen/et_margin_top"
        >
        <EditText
            android:id="@+id/et_otp1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/tv_register_margin_left"
            android:inputType="number|textWebEditText"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            />
        <EditText
            android:id="@+id/et_otp2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/tv_register_margin_left"
            android:inputType="number|textWebEditText"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            />
        <EditText
            android:id="@+id/et_otp3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/tv_register_margin_left"
            android:inputType="number|textWebEditText"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            />
        <EditText
            android:id="@+id/et_otp4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/tv_register_margin_left"
            android:layout_marginRight="@dimen/tv_register_margin_right"
            android:inputType="number|textWebEditText"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@+id/liner_otp"
        android:layout_marginTop="@dimen/et_margin_top"
        >
    <Button
        android:id="@+id/btn_otp_resend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_register_margin_left"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:layout_weight="1"
        android:background="@drawable/custom_btnstoke"
        android:text="@string/otp_btn_resend_text"/>

    <Button
        android:id="@+id/btn_otp_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/tv_register_margin_right"
        android:background="@drawable/custom_btn"
        android:text="@string/otp_btn_submit_text"
        android:textColor="@color/color_btn_text"/>
    </LinearLayout>
</RelativeLayout>